3.4.3/_sources/gallery/axisartist/simple_axisline2.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/axisartist/simple_axisline2.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_axisartist_simple_axisline2.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axisartist_simple_axisline2.py:


================
Simple Axisline2
================

.. GENERATED FROM PYTHON SOURCE LINES 7-29



.. image:: /gallery/axisartist/images/sphx_glr_simple_axisline2_001.png
    :alt: simple axisline2
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    from mpl_toolkits.axisartist.axislines import AxesZero
    import numpy as np

    fig = plt.figure(figsize=(4, 3))

    # a subplot with two additional axis, "xzero" and "yzero". "xzero" is
    # y=0 line, and "yzero" is x=0 line.
    ax = fig.add_subplot(axes_class=AxesZero)

    # make xzero axis (horizontal axis line through y=0) visible.
    ax.axis["xzero"].set_visible(True)
    ax.axis["xzero"].label.set_text("Axis Zero")

    # make other axis (bottom, top, right) invisible.
    for n in ["bottom", "top", "right"]:
        ax.axis[n].set_visible(False)

    xx = np.arange(0, 2*np.pi, 0.01)
    ax.plot(xx, np.sin(xx))

    plt.show()


.. _sphx_glr_download_gallery_axisartist_simple_axisline2.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: simple_axisline2.py <simple_axisline2.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: simple_axisline2.ipynb <simple_axisline2.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
